# solo-builder

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.ci  README.md  SPEC.md  demo.cast  gen_demo_cast.py  journal.md  make_demo_cast.py  profiler_harness.py  pyproject.toml  repo_index.json  requirements.txt  solo_builder_cli.py  solo_builder_live_multi_snapshot.py  solo_builder_outputs.md
.claude/: settings.json  settings.local.json
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml  smoke-test.yml
agents/: __init__.py  patch_reviewer.py  repo_analyzer.py  test_generator.py  test_patch_reviewer.py  test_repo_analyzer.py  test_test_generator.py
api/: app.py  dashboard.html  test_app.py
claude/: AGENT_ENTRY.md  ARTIFACTS_SUMMARY.md  CONTROL.md  HANDOFF_ARCHITECT.md  HANDOFF_AUDIT.md  HANDOFF_DEV.md  HANDOFF_RESEARCH.md  ITERATION.md  JOURNAL.md  NEEDS_HUMAN.md  PROJECT_CHECKLIST.md  PROJECT_CONTEXT.md  PR_BODY.md  REDACTION.md  REPRO.md  RULES.md  STATE.json  STATE_SCHEMA.md  TASK_ACTIVE.md  TASK_DONE.md  TASK_QUEUE.md  VERIFY.json  VERIFY.md  WHO_HAS_CONTROL.md  WORKFLOW_SPEC.md  allowed_files.txt  verify_last.json
claude/checklists/: ARCHITECT.md  AUDITOR.md  DEV.md  RESEARCH.md  REVIEW.md
claude/journal_archive/: 2026-03.md
claude/prompts/: architect_prompt.txt  auditor_prompt.txt  dev_prompt.txt  research_prompt.txt
claude/templates/: HANDOFF_AUDIT_TEMPLATE.md  HANDOFF_DEV_TEMPLATE.md  NEXT_ACTION_TEMPLATE.md
config/: settings.json
core/: __init__.py  budget.py  dag_transitions.py  persistence.py  policy_engine.py  triggers.py
discord_bot/: bot.py  test_bot.py
docs/: AI_ACTION_SCOPE.md  CLI_REFACTOR_DESIGN.md  CONTEXT_WINDOW_STRATEGY.md  HITL_TRIGGER_DESIGN.md  PROMPT_REGISTRY.md  PROMPT_STANDARD.md  SLO_DEFINITIONS.md  TECH_DEBT_REGISTER.md  THREAT_MODEL.md  dev_notes.md
solo_builder/: CHANGELOG.md  CHECKLIST.md  README.md  SPEC.md  cli_utils.py  dag_definition.py  demo.cast  display.py  metrics.jsonl  profiler_harness.py  pyproject.toml  requirements.txt  solo_builder_cli.py
solo_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
solo_builder/agents/: __init__.py  meta_optimizer.py  patch_reviewer.py  planner.py  repo_analyzer.py  self_healer.py  shadow_agent.py  test_agents.py  test_generator.py  verifier.py
solo_builder/api/: app.py  constants.py  dashboard.html  helpers.py  middleware.py  test_app.py  validators.py
solo_builder/commands/: __init__.py  auto_cmds.py  dag_cmds.py  dispatcher.py  query_cmds.py  settings_cmds.py  step_runner.py  (+1 more)
telegram_bot/: bot.py
tests/: test_budget_manager.py  test_core_runtime.py  test_dag_invariants.py  test_dag_transitions.py  test_persistence.py  test_policy_enforcement.py  test_policy_engine.py  test_recovery.py  test_reliability_runtime.py  test_runtime_views.py  test_throughput_controls.py  test_triggers.py
tools/: NOTION_WORKFLOW.md  advance_state.ps1  archive_journal.py  artifacts_summarize.ps1  audit_check.ps1  auto_batch.py  bootstrap_verify.ps1  cache_stats.py  check_next_action_consistency.ps1  ci_invariant_check.ps1  ci_quality_gate.py  claude_heal.ps1  claude_orchestrate.ps1  claude_snapshot.ps1  claude_status.ps1  config_drift.py  context_window_budget.py  context_window_check.py  context_window_compact.py  context_window_warn.ps1  debt_scan.py  dep_audit.py  dep_severity_check.py  dev_gate.ps1  enforce_allowed_files.ps1  extract_allowed_files.ps1  generate_openapi.py  install_git_hooks.ps1  lint_check.py  lint_dashboard_handlers.js  lock_file_gen.py  metrics_alert_check.py  new_file_guard.ps1  no_dep_bump_guard.ps1  notion_ai_log.py  notion_client.py  notion_config.py  notion_feedback.py  notion_sync.py  parse_junit.ps1  (+26 more)
utils/: helper_functions.py  invariants.py  repo_index.py  runtime_views.py  safety.py  test_repo_index.py  test_safety.py
(+194 files in other folders)
