[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-builder"
version = "2.1"
description = "AI agent CLI that manages DAG-based project tasks with six agents and the Anthropic SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "dag", "anthropic", "cli", "project-management", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40",
    "flask>=3.1",
]

[project.optional-dependencies]
pdf      = ["matplotlib>=3.10", "numpy>=2.2"]
discord = ["discord.py>=2.0"]

[project.scripts]
solo-builder = "solo_builder_cli:main"

[project.urls]
Homepage  = "https://github.com/Vaultifacts/solo-builder"
Repository = "https://github.com/Vaultifacts/solo-builder"
Changelog  = "https://github.com/Vaultifacts/solo-builder/blob/master/CHANGELOG.md"

[tool.setuptools]
py-modules = ["solo_builder_cli", "solo_builder_live_multi_snapshot", "profiler_harness"]
packages   = ["utils", "discord_bot"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["config/settings.json", "api/dashboard.html", "api/app.py"]
