[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-builder"
version = "6.47.0"
description = "A Python CLI that uses 6 AI agents and the Anthropic SDK to manage DAG-based project tasks"
readme = "solo_builder/README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Vaultifacts" }]
keywords = ["ai", "agents", "dag", "project-management", "anthropic", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40",
    "flask>=3.1",
]

[project.optional-dependencies]
pdf = ["matplotlib>=3.10", "numpy>=2.2"]

[project.urls]
Homepage = "https://github.com/Vaultifacts/solo-builder"
Repository = "https://github.com/Vaultifacts/solo-builder"
"Bug Tracker" = "https://github.com/Vaultifacts/solo-builder/issues"

[project.scripts]
solo-builder = "solo_builder.solo_builder_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solo_builder*"]

[tool.setuptools.package-data]
solo_builder = ["config/*.json", "api/*.html"]

# ---------------------------------------------------------------------------
# mutmut — mutation testing configuration (QA-035, TASK-334)
# ---------------------------------------------------------------------------
[tool.mutmut]
# Paths to mutate — core business logic only; skip CLI entry-point and tests
paths_to_mutate = [
    "solo_builder/runners/",
    "solo_builder/api/",
    "solo_builder/commands/",
    "solo_builder/utils/",
]
# Test runner invoked after each mutation
runner = "python -m pytest solo_builder/tests/ -x -q --tb=no"
# File patterns to exclude from mutation
dict_synonyms = "Arg, Kwarg"
# Cache-friendly test selection — fastest tests first
tests_dir = "solo_builder/tests/"
